appId: com.example.expotemplate
---
- launchApp
- assertVisible: "Home"
- tapOn: "Profile"
- assertVisible: "Profile"
